
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int fprintf (int ,char*,...) ;
 int printx (char*,char*,...) ;
 int stderr ;
 int strcmp (char*,char*) ;
 int usage (char*) ;

int main(int argc, char **argv) {

 if (argc < 2) {
  usage(argv[0]);
  return -1;
 }

 if (argv[2][0] != '/') {

  fprintf(stderr, "filename must begin with '/' as any sane URL! (e.g. /index.html)\n");

  return -1;
 }

 if (!strcmp(argv[1], "-0")) {

  return printx("GET %s HTTP/1.0\r\n\r\n", argv[2]);
 }

 if (!strcmp(argv[1], "-1")) {

  if (argc != 4) {

   fprintf(stderr, "missing <host>, required parameter for HTTP/1.1 header! (e.g. www.tty64.org)\n");

   return -1;
  }

  return printx("GET %s HTTP/1.1\r\nHost: %s\r\n\r\n", argv[2], argv[3]);
 }

 fprintf(stderr, "%s: unknown http protocol, try -0 or -1\n", argv[1]);

 return -1;
}
